--- a/backend-laravel/composer.json
+++ b/backend-laravel/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "barryvdh/laravel-cors": "^3.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^3.0",
         "laravel/framework": "^6.20.26",
