--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -8,14 +8,17 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/vue-fontawesome": "^2.0.6",
         "axios": "^0.26.1",
         "core-js": "^3.8.3",
+        "vee-validate": "^2.2.15",
         "vue": "^2.6.14",
         "vue-router": "^3.5.1",
         "vuex": "^3.6.2"
     },
     "devDependencies": {
-        "autoprefixer": "^7.1.2",
         "@babel/core": "^7.12.16",
         "@babel/eslint-parser": "^7.12.16",
         "@vue/cli-plugin-babel": "~5.0.0",
@@ -23,6 +26,7 @@
         "@vue/cli-plugin-router": "~5.0.0",
         "@vue/cli-plugin-vuex": "~5.0.0",
         "@vue/cli-service": "~5.0.0",
+        "autoprefixer": "^7.1.2",
         "eslint": "^7.32.0",
         "eslint-plugin-vue": "^8.0.3",
         "sass": "^1.32.7",
